# uGLAD

./: LICENSE  README.md  demo-uGLAD.ipynb  environment.yml  pyproject.toml  setup.sh
examples/: demo-uGLAD.ipynb
uGLAD/: main.py
uGLAD/glad/: glad.py  glad_params.py  torch_sqrtm.py
uGLAD/utils/: metrics.py  prepare_data.py
uglad/: main.py
uglad/glad/: glad_params.py
uglad/utils/: prepare_data.py
