[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uglad"
version = "2.0.0"
authors = [
  { name="Harsh Shrivastava", email="harshshrivastava111@gmail.com" },
]
description = "A deep unrolled architecture to recover conditional independence graphs. A better alternative to BCD and other graphical lasso solvers."
readme = "README.md"
requires-python = ">=3.13"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "matplotlib",
    "pandas",
    "networkx",
    "scipy",
    "scikit-learn",
    "pyvis"
]

[project.optional-dependencies]
dev = ["notebook", "ipykernel"]

[project.urls]
"Homepage" = "https://github.com/Harshs27/uglad"
"Bug Tracker" = "https://github.com/Harshs27/uglad/issues"
"Paper" = "https://arxiv.org/abs/2205.11610"